[gd_scene load_steps=7 format=3 uid="uid://b0l3eblj4pj2o"]

[ext_resource type="Script" uid="uid://0xndqtgf7lpo" path="res://assets/scripts/Setting.gd" id="1_233j7"]
[ext_resource type="Theme" uid="uid://ciqt5b2loudis" path="res://assets/themes/label_themes/SettingsName.tres" id="2_dor8s"]
[ext_resource type="Theme" uid="uid://d4cpkwegmw2k2" path="res://assets/themes/tabbar_themes/tabbar.tres" id="3_4ikfc"]
[ext_resource type="Theme" uid="uid://ci3mmdk7ig6um" path="res://assets/themes/slider_themes/volume.tres" id="3_4xnx0"]
[ext_resource type="Theme" uid="uid://bgn3lly05omk" path="res://assets/themes/tabbarcontainer_themes/tabbarcontainer.tres" id="3_nyivl"]
[ext_resource type="Theme" uid="uid://cr5ga4ue8l8pw" path="res://assets/themes/optionbutton_themes/optionbutton.tres" id="4_4xnx0"]

[node name="Setting" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_233j7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_dor8s")
text = "Pengaturan"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_nyivl")
current_tab = 1

[node name="Video" type="TabBar" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme = ExtResource("3_4ikfc")
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Video/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Video/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="DisplayMode" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Video/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_dor8s")
text = "Window Mode"

[node name="DisplayModeButton" type="OptionButton" parent="MarginContainer/VBoxContainer/TabContainer/Video/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_4xnx0")
selected = 0
item_count = 2
popup/item_0/text = "Full Screen"
popup/item_0/id = 0
popup/item_1/text = "Windowed"
popup/item_1/id = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Video/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Resolution" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Video/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_dor8s")
text = "Screen Size"

[node name="ResolutionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/TabContainer/Video/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("4_4xnx0")
selected = 0
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "720x480"
popup/item_2/id = 2

[node name="Audio" type="TabBar" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme = ExtResource("3_4ikfc")
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Master" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_dor8s")
text = "Master"

[node name="VolumeMaster" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("3_4xnx0")
max_value = 1.0
step = 0.001

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Musik" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("2_dor8s")
text = "Musik"

[node name="VolumeMusik" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("3_4xnx0")
max_value = 1.0
step = 0.001

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Efek Suara" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_dor8s")
text = "Efek Suara"

[node name="VolumeEfekSuara" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("3_4xnx0")
max_value = 1.0
step = 0.001

[node name="BackButton" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 55
text = "back"

[connection signal="tab_clicked" from="MarginContainer/VBoxContainer/TabContainer" to="." method="_on_tab_container_tab_clicked"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/TabContainer/Video/MarginContainer/VBoxContainer/HBoxContainer/DisplayModeButton" to="." method="_on_display_mode_button_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TabContainer/Video/MarginContainer/VBoxContainer/HBoxContainer/DisplayModeButton" to="." method="_on_display_mode_button_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/TabContainer/Video/MarginContainer/VBoxContainer/HBoxContainer2/ResolutionButton" to="." method="_on_resolution_button_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TabContainer/Video/MarginContainer/VBoxContainer/HBoxContainer2/ResolutionButton" to="." method="_on_resolution_button_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/VBoxContainer/HBoxContainer/VolumeMaster" to="." method="_on_volume_master_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/VBoxContainer/HBoxContainer3/VolumeMusik" to="." method="_on_volume_musik_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/VBoxContainer/HBoxContainer2/VolumeEfekSuara" to="." method="_on_volume_efek_suara_value_changed"]
[connection signal="pressed" from="MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
